--- a/opss/1.Representaciónycomunicacióndelainformación.docx.md
+++ b/opss/1.Representaciónycomunicacióndelainformación.docx.md
@@ -1,122 +1,111 @@
-
 - [Representación y comunicación de la información](#representaci%C3%B3n-y-comunicaci%C3%B3n-de-la-informaci%C3%B3n)
   - [Introducción](#introducci%C3%B3n)
+  - [Representación de la información digital](#representaci%C3%B3n-de-la-informaci%C3%B3n-digital)
+    - [Concepto y medida de la información](#concepto-y-medida-de-la-informaci%C3%B3n)
+    - [Representación de la información](#representaci%C3%B3n-de-la-informaci%C3%B3n)
+      - [Sistema binario](#sistema-binario)
+    - [Sistema hexadecimal y octal](#sistema-hexadecimal-y-octal)
+    - [Sistemas alfanuméricos](#sistemas-alfanum%C3%A9ricos)
+    - [Compresión](#compresi%C3%B3n)
+    - [Corrección y detección de errores](#correcci%C3%B3n-y-detecci%C3%B3n-de-errores)
+    - [Seguridad](#seguridad)
+  - [Sistemas de comunicación ##](#sistemas-de-comunicaci%C3%B3n)
+    - [Evolución histórica](#evoluci%C3%B3n-hist%C3%B3rica)
+    - [Elementos de un sistema de comunicación](#elementos-de-un-sistema-de-comunicaci%C3%B3n)
+    - [Sistemas analógicos y digitales](#sistemas-anal%C3%B3gicos-y-digitales)
+    - [Sistemas analógicos](#sistemas-anal%C3%B3gicos)
+    - [Sistemas digitales](#sistemas-digitales)
+      - [Ventajas sistemas digitales](#ventajas-sistemas-digitales)
+    - [Digitalización de señales analógicas](#digitalizaci%C3%B3n-de-se%C3%B1ales-anal%C3%B3gicas)
+    - [Ruido en las comunicaciones](#ruido-en-las-comunicaciones)
 
 # Representación y comunicación de la información
 
 ## Introducción
 
-Actualidad vivimos inmersos en información llegada distintos medios.
+- Actualidad vivimos inmersos en información llegada distintos medios.
+- Presencia de diferentes canales de comunicación (telefonía móvil, redes inalámbricas)
+- Información disponible en todo momento y en todo lugar
+- Evolución de diferentes sistemas en la historia deciente  de la humanidad.
 
-Presencia de diferentes canales de comunicación (telefonía móvi, lredes
-inalámbricas)
-
-Información disponible en todo momento y en todo lugar
-
-Evolución de diferentes sistemas en la historia deciente de la
-humanidad.
-
-## Representación de la información digital## 
+## Representación de la información digital
 
 ### Concepto y medida de la información
 
-Cantidad de información inversamente proporcional a prob. de ocurrir
-(Nevar en córdoba)
+- Cantidad de información inversamente proporcional a prob. de ocurrir (Nevar en córdoba)
+- Entropía
 
-Entropía
+### Representación de la información
 
-### Representación de la información## 
+#### Sistema binario
 
-Sistema binario
+- Transformación
+- Unidades de almacenamiento
 
-Transformación
+### Sistema hexadecimal y octal
 
-Unidades de almacenamiento
+### Sistemas alfanuméricos
 
-Sistema hexadecimal y octal
+- ASCII y ASCII extendido
+- Unicode
 
-Sistemas alfanuméricos
+### Compresión
 
-ASCII y ASCII extendido
+### Corrección y detección de errores
 
-Unicode
-
-### Compresión## 
-
-### Corrección y detección de errores## 
-
-### Seguridad## 
+### Seguridad
 
 Criptografia
 
 ## Sistemas de comunicación ## 
 
-### Evolución histórica## 
+### Evolución histórica
 
-Morse (Digital). Código digital (símbolos finitos: punto y raya) de
-longitud variable. Telegrafía.
+- Morse (Digital). Código digital (símbolos finitos: punto y raya) de longitud variable. Telegrafía.
+- Teléfono (analógico a diferencia de morse). Voz se convierte en impulsos eléctricos mediante circuitos
+- Radio AM, televisión y radio FM (analógico)
+- Telefonía digital
+- Comunicación por satélite
+- Internet
+- Telefonía móvil
 
-Teléfono (analógico a diferencia de morse). Voz se convierte en impulsos
-eléctricos mediante circuitos
+### Elementos de un sistema de comunicación
 
-Radio AM, televisión y radio FM (analógico)
+- Tranmitir información de un punto a otro a través de un medio.
+- Emisor, receptor, canal.
+- Explicación modulación (señal moduladora y portadora)
+- Ruidos y distorsiones
 
-Telefonía digital
+### Sistemas analógicos y digitales
 
-Comunicación por satélite
+### Sistemas analógicos
 
-Internet
+- Información puede aportar cualquier valor
+- Cualquier amplitud y frecuencia
+- Vulnerable a interferencias
 
-Telefonía móvil
+### Sistemas digitales
 
-### Elementos de un sistema de comunicación## 
+- Información toma valores discretos.
+- Conversores A/D y D/A
 
-Tranmitir información de un punto a otro a través de un medio. Emisor,
-receptor, canal.
+#### Ventajas sistemas digitales
 
-Explicación modulación (señal moduladora y portadora)
+- Eficicencia. Permite comprimir información
+- Flexibilidad, capacidad de procesamiento y almacenamiento
+- Resitencia frente al ruido. Capacidad de regeneración de la señal digital
+- Redundancia para detección y corrección de errores.
+  - Bit de paridad
+  - Bit de paridad fila y columna
 
-Ruidos y distorsiones
+### Digitalización de señales analógicas
 
-### Sistemas analógicos y digitales## 
+- Transmisión señales analógicas por medios digitales necesitan conversión
+- Muestreo
+- Cuantificación (niveles)
 
-Sistemas analógicos
+### Ruido en las comunicaciones
 
-Información puede aportar cualquier valor
-
-Cualquier amplitud y frecuencia
-
-Vulnerable a interferencias
-
-Sistemas digitales
-
-Información toma valores discretos.
-
-Conversores A/D y D/A
-
-Ventajas sistemas digitales
-
-Eficicencia. Permite comprimir información
-
-Flexibilidad, capacidad de procesamiento y almacenamiento
-
-Resitencia frente al ruido. Capacidad de regeneración de la señal
-digital
-
-Redundancia para detección y corrección de errores.
-
-Bit de paridad. Bit de paridad fila y columna
-
-### Digitalización de señales analógicas## 
-
-Transmisión señales analógicas por medios digitales necesitan conversión
-
-Muestreo
-
-Cuantificación (niveles)
-
-### Ruido en las comunicaciones## 
-
-- Canal introduce ruido. 
+- Canal introduce ruido
 - Afecta a la señal y decidir en receptor señal
 original.
