--- a/opss/16.Sistemasoperativos.Gestióndeprocesos.docx.md
+++ b/opss/16.Sistemasoperativos.Gestióndeprocesos.docx.md
@@ -1,126 +1,105 @@
-- [Concepto de proceso##](#concepto-de-proceso)
-- [Estados de un proceso##](#estados-de-un-proceso)
-- [Bloque de control de procesos##](#bloque-de-control-de-procesos)
-- [Planificación de procesos##](#planificaci%C3%B3n-de-procesos)
-- [Comunicación entre procesos##](#comunicaci%C3%B3n-entre-procesos)
+# SO. Gestión de procesos
+
+- [SO. Gestión de procesos](#so-gesti%C3%B3n-de-procesos)
+  - [Concepto de proceso##](#concepto-de-proceso)
+  - [Estados de un proceso##](#estados-de-un-proceso)
+  - [Bloque de control de procesos](#bloque-de-control-de-procesos)
+  - [Planificación de procesos](#planificaci%C3%B3n-de-procesos)
+    - [Aspectos a comparar](#aspectos-a-comparar)
+    - [Tipos](#tipos)
+    - [Selección del algoritmo optimo](#selecci%C3%B3n-del-algoritmo-optimo)
+  - [Comunicación entre procesos](#comunicaci%C3%B3n-entre-procesos)
+    - [Sección crítica](#secci%C3%B3n-cr%C3%ADtica)
+    - [Exclusión mutua](#exclusi%C3%B3n-mutua)
+    - [Semáforos](#sem%C3%A1foros)
+    - [Interbloqueos](#interbloqueos)
+    - [Sincronización en Java](#sincronizaci%C3%B3n-en-java)
 
 ## Concepto de proceso## 
 
 Partes
 
-Programa ejecutable
-
-Datos
-
-Pila
-
-Registros
-
-Contador de programa
+- Programa ejecutable
+- Datos
+- Pila
+- Registros
+- Contador de programa
 
 Procesos padres e hijos
 
 ## Estados de un proceso## 
 
-Nuevo: si es admitido pasa al estado de preparado
+- Nuevo: si es admitido pasa al estado de preparado
+- Preparado: procesos admitidos,  interrumpidos o que vienen de estar en bloqueo
+- En ejecución: seleccionado por el  planificador de la cola de preparados para ejecutarse
+- Bloqueado: a la espera de una operación de E/S o de completarse un evento
+- Terminado: cuando se ha terminado de ejecutar el proceso
 
-Preparado: procesos admitidos, interrumpidos o que vienen de estar en
-bloqueo
-
-En ejecución: seleccionado por el planificador de la cola de preparados
-para ejecutarse
-
-Bloqueado: a la espera de una operación de E/S o de completarse un
-evento
-
-Terminado: cuando se ha terminado de ejecutar el proceso
-
-## Bloque de control de procesos## 
+## Bloque de control de procesos
 
 PCB por cada proceso, enlazados por punteros
 
-Partes
+Partes:
 
-Estado del proceso
+- Estado del proceso
+- Identificador o PID
+- Contador de programa
+- Prioridad
+- Puntero a la zona de memoria
+- Puntero a los recursos asignados
+- Zona de almacenamiento de registros en CPU
 
-Identificador o PID
+## Planificación de procesos
 
-Contador de programa
+### Aspectos a comparar
 
-Prioridad
+- Tiempos de respuesta
+- Cambios de contexto
+- Dificultad de implementación
 
-Puntero a la zona de memoria
+### Tipos
 
-Puntero a los recursos asignados
+- FIFO
+- SJF
+- Prioridad
+- Round Robin
+- Colas multinivel
 
-Zona de almacenamiento de registros en CPU
+### Selección del algoritmo optimo
 
-## Planificación de procesos## 
+- Evaluación analítica
+- Modulación determinista
+- Modelos de colas
+- Simulación
 
-Aspectos a comparar
-
-Tiempos de respuesta
-
-Cambios de contexto
-
-Dificultad de implementación
-
-Tipos
-
-FIFO
-
-SJF
-
-Prioridad
-
-Round Robin
-
-Colas multinivel
-
-Selección del algoritmo optimo
-
-Evaluación analítica
-
-Modulación determinista
-
-Modelos de colas
-
-Simulación
-
-## Comunicación entre procesos## 
+## Comunicación entre procesos
 
 Variables compartidas
 
 Condiciones de carrera
 
-Sección crítica:
+### Sección crítica
 
-secuencia de instrucciones que se debe ejecutar de forma indivisible.
+Secuencia de instrucciones que se debe ejecutar de forma indivisible.
 
-Operaciones de 2 secciones críticas respecto a la misma variable no se
-deben entrelazar
+Operaciones de 2 secciones críticas respecto a la misma variable no se deben entrelazar
 
-Exclusión mutua
+### Exclusión mutua
 
 Forma de sincronización para proteger sección crítica
 
-Semáforos
+### Semáforos
 
-Variable que toma valores enteros no negativos. 2 operaciones (up y
-down). Toma valores 0 o 1. Un semáforo binario se llama mutex
+- Variable que toma valores enteros no negativos. 2 operaciones (up y down)
+- Toma valores 0 o 1
+- Un semáforo binario se llama mutex
 
-Interbloqueos
+### Interbloqueos
 
 Cuando cada proceso espera una condición o recurso que depende del otro
 
-Sincronización en Java
+### Sincronización en Java
 
-Para aplicar exclusión mútua utilizar palabra synchronized en
-declaración de atributos, métodos o en un bloque de ódigo
-
-Todos los métodos definidos con synchronized se ejecutarán en exclusión
-mútua
-
-Cuando se ejecuta un método sincronizado el resto de métodos
-sincronizados no se puede ejecutar, y tendrán que esperar a que acabe el
-proceso que se está ejecutando
+- Para aplicar exclusión mútua utilizar palabra synchronized en declaración de atributos, métodos o en un bloque de ódigo
+- Todos los métodos definidos con  synchronized se ejecutarán en exclusión mútua
+- Cuando se ejecuta un método sincronizado el resto de métodos sincronizados no se puede ejecutar, y tendrán que esperar a que acabe el proceso que se está ejecutando
