--- a/opss/17.Sistemasoperativos.Gestiondememoria.docx.md
+++ b/opss/17.Sistemasoperativos.Gestiondememoria.docx.md
@@ -1,57 +1,63 @@
-- [Conceptos generales##](#conceptos-generales)
-- [Fragmentación##](#fragmentaci%C3%B3n)
-- [Modelos de gestión de memoria##](#modelos-de-gesti%C3%B3n-de-memoria)
-- [Asignación contigua##](#asignaci%C3%B3n-contigua)
-- [Asignación dispersa##](#asignaci%C3%B3n-dispersa)
-- [Memoria virtual##](#memoria-virtual)
+# SO. Gestión de memoria
+
+- [SO. Gestión de memoria](#so-gesti%C3%B3n-de-memoria)
+  - [Conceptos generales##](#conceptos-generales)
+    - [Funciones de gestión de memoria](#funciones-de-gesti%C3%B3n-de-memoria)
+    - [Jerarquía de memoria](#jerarqu%C3%ADa-de-memoria)
+    - [Principio de localidad](#principio-de-localidad)
+    - [Protección de memoria](#protecci%C3%B3n-de-memoria)
+    - [Control de memoria](#control-de-memoria)
+  - [Fragmentación](#fragmentaci%C3%B3n)
+  - [Tipos de fragmentación](#tipos-de-fragmentaci%C3%B3n)
+  - [Modelos de gestión de memoria##](#modelos-de-gesti%C3%B3n-de-memoria)
+  - [Asignación contigua](#asignaci%C3%B3n-contigua)
+    - [Multiprogramación con número fijo de tareas (MFT)](#multiprogramaci%C3%B3n-con-n%C3%BAmero-fijo-de-tareas-mft)
+    - [Multiprogramación con número variable de tareas (MVT)](#multiprogramaci%C3%B3n-con-n%C3%BAmero-variable-de-tareas-mvt)
+  - [Asignación dispersa](#asignaci%C3%B3n-dispersa)
+    - [Segmentación](#segmentaci%C3%B3n)
+    - [Paginación](#paginaci%C3%B3n)
+    - [Segmentación paginada](#segmentaci%C3%B3n-paginada)
+    - [Paginación multinivel](#paginaci%C3%B3n-multinivel)
+  - [Memoria virtual](#memoria-virtual)
 
 ## Conceptos generales## 
 
-Funciones de gestión de memoria
+### Funciones de gestión de memoria
 
-Asignación/liberación a procesos
+- Asignación/liberación a procesos
+- Control de zonas utilizadas
+- Protección
+- Zonas compartidas de memoria
 
-Control de zonas utilizadas
+### Jerarquía de memoria
 
-Protección
+- Registros, cache, memoria principal, memoria secundaria
 
-Zonas compartidas de memoria
+### Principio de localidad
 
-Jerarquía de memoria
+- Temporal (Bucles while, for, etc.)
+- Espacial (Arrays, cadenas, etc.)
 
-Registros, cache, memoria principal, memoria secundaria
+### Protección de memoria
 
-Principio de localidad
+- Registros
+- Bits de protección
+- Derechos de acceso
 
-Temporal (Bucles while, for, etc.)
+### Control de memoria
 
-Espacial (Arrays, cadenas, etc.)
+- Mapas de bits
+- Listas enlazadas
 
-Protección de memoria
+## Fragmentación
 
-Registros
+- Objetivo gestor de memòria: maximitzar utilización de la memòria
+- Fragmentación produce desaprovechamiento
 
-Bits de protección
+## Tipos de fragmentación
 
-Derechos de acceso
-
-Control de memoria
-
-Mapas de bits
-
-Listas enlazadas
-
-## Fragmentación## 
-
-Objetivo gestor de memòria: maximitzar utilización de la memòria
-
-Fragmentación produce desaprovechamiento
-
-Tipos de fragmentación
-
-Interna: espacio desaprovechado dentro de un bloque
-
-Externa: zones libres entre bloques de memòria que no pueden ser
+- Interna: espacio desaprovechado dentro de un bloque
+- Externa: zones libres entre bloques de memòria que no pueden ser
 llenados
 
 ## Modelos de gestión de memoria## 
@@ -74,60 +80,46 @@ SO en memoria ROM
 
 Establecer direcciones límite
 
-## Asignación contigua## 
+## Asignación contigua
 
-Multiprogramación con número fijo de tareas (MFT)
+### Multiprogramación con número fijo de tareas (MFT)
 
-Memoria se divide en bloques que son asignados a los diferentes procesos
+- Memoria se divide en bloques que son asignados a los diferentes procesos
+- Puede haber bloques de diferentes tamaños
+- Lista de espera unida (cola única)
+- Listas de espera separadas (colas variadas)
 
-Puede haber bloques de diferentes tamaños
+### Multiprogramación con número variable de tareas (MVT)
 
-Lista de espera unida (cola única)
+- Ventaja: fragmentación interna se elimina
+- Desventaja: más completa de implementar
 
-Listas de espera separadas (colas variadas)
+## Asignación dispersa
 
-Multiprogramación con número variable de tareas (MVT)
+### Segmentación
 
-Ventaja: fragmentación interna se elimina
+- Procesos se dividen en segmentos
+- Tabla de descriptores de segmentos (TDS)
+- Ventajas: No se necesita una partición contigua para todo el proceso
 
-Desventaja: más completa de implementar
+### Paginación
 
-## Asignación dispersa## 
+- Tabla de mapa de páginas
+- Paginación multinivel
+- División de memoria en marcos y del proceso en páginas.
+- Asignación de páginas a marcos.
+- Algoritmos de asignación y reemplazo
 
-Segmentación
+### Segmentación paginada
 
-Procesos se dividen en segmentos
+### Paginación multinivel
 
-Tabla de descriptores de segmentos (TDS)
+- Paginar la propia tabla de páginas
+- Se necesitan más accesos a memoria
 
-Ventajas: No se necesita una partición contigua para todo el proceso
+## Memoria virtual
 
-Paginación
-
-Tabla de mapa de páginas
-
-Paginación multinivel
-
-División de memoria en marcos y del proceso en páginas.
-
-Asignación de páginas a marcos.
-
-Algoritmos de asignación y reemplazo
-
-Segmentación paginada
-
-Paginación multinivel
-
-Paginar la propia tabla de páginas
-
-Se necesitan más accesos a memoria
-
-## Memoria virtual## 
-
-Algoritmos
-
-FIFO
-
-LRU
-
-Swapping o intercambio
+- Algoritmos
+  - FIFO
+  - LRU
+- Swapping o intercambio
