--- a/opss/3.Componentesestructurayfuncionamientodelaunidadcentraldeproceso.docx.md
+++ b/opss/3.Componentesestructurayfuncionamientodelaunidadcentraldeproceso.docx.md
@@ -1,145 +1,139 @@
-- [Componentes CPU##](#componentes-cpu)
-- [Unidad aritmético lógica (ALU)##](#unidad-aritm%C3%A9tico-l%C3%B3gica-alu)
-- [Unidad de control##](#unidad-de-control)
-- [Registros##](#registros)
+- [Componentes CPU](#componentes-cpu)
+- [Unidad aritmético lógica (ALU)](#unidad-aritm%C3%A9tico-l%C3%B3gica-alu)
+  - [Desplazamiento de bits](#desplazamiento-de-bits)
+  - [Operaciones lógicas](#operaciones-l%C3%B3gicas)
+  - [Operaciones aritméticas](#operaciones-aritm%C3%A9ticas)
+    - [Suma](#suma)
+    - [Resta](#resta)
+    - [Multiplicación](#multiplicaci%C3%B3n)
+    - [División](#divisi%C3%B3n)
+- [Unidad de control](#unidad-de-control)
+  - [Microoperaciones](#microoperaciones)
+  - [Tipos](#tipos)
+    - [Cableada](#cableada)
+    - [Microprogramada](#microprogramada)
+  - [Señales de control](#se%C3%B1ales-de-control)
+    - [De entrada](#de-entrada)
+    - [De salida](#de-salida)
+- [Registros](#registros)
 - [Ejecución de instrucciones##](#ejecuci%C3%B3n-de-instrucciones)
+  - [Secuencia ciclo de instrucción](#secuencia-ciclo-de-instrucci%C3%B3n)
+  - [Interrupciones](#interrupciones)
 
-## Componentes CPU## 
+## Componentes CPU
 
-UCP formada por UC, ALU, registros, buses de interconexión que unen
-todos los elementos
+- UCP formada por UC, ALU, registros, buses de interconexión - que unen todos los elementos
+- Funcionamiento UCP. Ciclo de ejecución
+- Buscar siguiente instrucción a ejecutar y cargar en RI
+- Buscar en memoria datos necesarios para operar
+- UC envía ordenes a ALU para realizar procesamiento
+- Datos de salida se copian en memoria y se actualiza RE
+- UC busca siguiente instrucción a ejecutar
 
-Funcionamiento UCP. Ciclo de ejecución
+## Unidad aritmético lógica (ALU)
 
-Buscar siguiente instrucción a ejecutar y cargar en RI
+### Desplazamiento de bits
 
-Buscar en memoria datos necesarios para operar
+- Mover bits hacia derecha o izquierda.
+- Relleno con ceros.
+- Igual a X o dividir por base de numeración
 
-UC envía ordenes a ALU para realizar procesamiento
-
-Datos de salida se copian en memoria y se actualiza RE
-
-UC busca siguiente instrucción a ejecutar
-
-## Unidad aritmético lógica (ALU)## 
-
-Desplazamiento de bits:
-
-Mover bits hacia derecha o izquierda. Relleno con ceros. (igual a X o
-dividir por base de numeración)
-
-Operaciones ## lógicas## 
+### Operaciones lógicas
 
 Mediante circuitos combinacionales
+- AND, OR, XOR, XNOR, etc.
 
-AND, OR, XOR, XNOR, etc.
+### Operaciones aritméticas 
 
-Operaciones ## aritméticas## 
+#### Suma
 
-Suma
+- Sumador completo 1 bit (5 puertas lógicas)
+- Sumador de N bits: Conjunto de sumadores completos enlazados.
 
-Sumador completo 1 bit (5 puertas lógicas)
+#### Resta
 
-Sumador de N bits: Conjunto de sumadores completos enlazados.
+- A partir de la operación de suma
+- Circuito Sumador-restador (seleccionable mediante señal de control)
+- Suma: A+B
+- Resta:
+  - Cambiar de signo A \> -A y sumar B+(-A)
 
-Resta
-
-A partir de la operación de suma
-
-Circuito Sumador-restador (seleccionable mediante señal de control)
-
-Suma: A+B
-
-Resta:
-
-Cambiar de signo A \> -A y sumar B+(-A)
-
-Multiplicación
+#### Multiplicación
 
 Suma y desplazamiento de bits a la izquierda
 
-División
+#### División
 
 Suma, resta y desplazamiento de bits
 
-## Unidad de control## 
+## Unidad de control
 
-2 funciones: descomponer instrucción en una serie de pasos consecutivos
-y ordenados. Generar señales de control. Activa y desactiva puertas
-lógicas que dan como resultado ejecución de una instrucción
+2 funciones:
 
-Micro operaciones
+- Descomponer instrucción en una serie de pasos consecutivos
+y ordenados.
+Generar señales de control.
+- Activa y desactiva puertas lógicas que dan como resultado ejecución de una instrucción
 
-Para ejecutar instrucción se descompone en pasos (cargar datos, operar,
-guardar resultado en memoria). instruciones se dividen en [micro
-operaciones]{.underline}.
+### Microoperaciones
 
-Determina que conjunto de [micro operaciones]{.underline} son necesarias
-para la ejecución de una instrucción
+Para ejecutar instrucción se descompone en pasos (cargar datos, operar, guardar resultado en memoria). instruciones se dividen en microoperaciones.
 
-Tipos
+Determina que conjunto de microoperaciones son necesarias para la ejecución de una instrucción
 
-Cableada. Gran rapidez.Formada por circuito combinacional difícil de
+### Tipos
+
+#### Cableada
+
+Gran rapidez.Formada por circuito combinacional difícil de
 diseñar y modificar
 
-Microprogramada: contiene todas las palabras de todas las
+#### Microprogramada
+
+Contiene todas las palabras de todas las
 microinstrucciones guardadas. Según instrucción lee la palabra adecuada.
 Más sencillo realizar cambios en microinstrucciones o agregar nuevas.
 
-Señales de control
+### Señales de control
 
-De entrada
+#### De entrada
 
-Reloj: marca tiempo de ejecución. Cada microoperación se ejecuta en un
-ciclo
-
-Flags: indica estados especiales producidos (acarreo)
-
-Registro de instrucción. Contiene siguiente instrucción a ejecutar.
-Determina microoperaciones que debe secuenciar la UC.
-
-Bus de control: proporciona otras señales importantes (ej.
+- Reloj: marca tiempo de ejecución. Cada microoperación se ejecuta en un ciclo
+- Flags: indica estados especiales producidos (acarreo)
+- Registro de instrucción. Contiene siguiente instrucción a ejecutar.
+- Determina microoperaciones que debe secuenciar la UC.
+- Bus de control: proporciona otras señales importantes (ej.
 Interrupciones)
 
-De salida: a partir de señales de entrada, se procesa la información y
+#### De salida
+
+A partir de señales de entrada, se procesa la información y
 se generan señales de salida:
 
-Internas: Entre ALU y Registros (copiar datos entre registros, ejecutar
-una instrucción)
+- **Internas**: Entre ALU y Registros (copiar datos entre registros, ejecutar una instrucción)
+- **Externas**: Con memoria o sistemas E/S
 
-Externas: Con memoria o sistemas E/S
-
-## Registros## 
+## Registros
 
 Memoria interna del procesador. Rápido acceso, número limitado.
 
-Visibles al usuario: pueden ser accedidos por el lenguaje ensamblador
-
-De datos, de dirección, de propósito general (pueden ser usados para
-ambos)
-
-De estado y control: gestionados por la unidad de control
-
-Contador de programa
-
-Registro de estado.
-
-Compuesto por flags de 1 bit.
-
-Desbordamiento, interrupción
-
-Registro de instrucción
+- Visibles al usuario: pueden ser accedidos por el lenguaje ensamblador
+  - De datos, de dirección, de propósito general (pueden ser usados para ambos)
+- De estado y control: gestionados por la unidad de control
+  - Contador de programa
+  - Registro de estado.
+    - Compuesto por flags de 1 bit.
+    - Desbordamiento, interrupción
+  - Registro de instrucción
 
 ## Ejecución de instrucciones## 
 
-Secuencia ciclo de instrucción
+### Secuencia ciclo de instrucción
 
-Búsqueda de instrucción + ejecución
+- Búsqueda de instrucción + ejecución
+- Búsqueda de instrucción + ejecución + interrupción
 
-Búsqueda de instrucción + ejecución + interrupción
+### Interrupciones
 
-Interrupciones
-
-Atender interrupción según prioridad
-
-Guardar estado anterior a la interrupción para recuperarlo a posteriori
+- Atender interrupción según prioridad
+- Guardar estado anterior a la interrupción para recuperarlo a posteriori
