--- a/opss/34. Sistemas gestores de BD.md
+++ b/opss/34. Sistemas gestores de BD.md
@@ -1,23 +1,27 @@
 # Sistemas gestores de bases de datos
 
 - [Sistemas gestores de bases de datos](#sistemas-gestores-de-bases-de-datos)
-- [2. Sistema gestor de bases de datos](#2-sistema-gestor-de-bases-de-datos)
-- [3. SGDB en el mercado:](#3-sgdb-en-el-mercado)
-- [4. Componentes](#4-componentes)
-- [5. Lenguajes de un SGDB](#5-lenguajes-de-un-sgdb)
-- [6. Funciones de un SGDB](#6-funciones-de-un-sgdb)
-- [7.	Arquitectura de un SGDB](#7-arquitectura-de-un-sgdb)
-- [8. Estructura de un SGDB](#8-estructura-de-un-sgdb)
-- [9. Tipos de sistemas](#9-tipos-de-sistemas)
+  - [Concepto de SGDB](#concepto-de-sgdb)
+  - [SGDB en el mercado:](#sgdb-en-el-mercado)
+  - [Componentes](#componentes)
+  - [Lenguajes de un SGDB](#lenguajes-de-un-sgdb)
+  - [Funciones de un SGDB](#funciones-de-un-sgdb)
+  - [Arquitectura de un SGDB](#arquitectura-de-un-sgdb)
+  - [Estructura de un SGDB](#estructura-de-un-sgdb)
+  - [Tipos de sistemas](#tipos-de-sistemas)
+    - [Según modelo de datos](#seg%C3%BAn-modelo-de-datos)
+    - [Monousuario y multiusuario](#monousuario-y-multiusuario)
+    - [Centralizado y distribuido](#centralizado-y-distribuido)
+    - [Enfoque que se da a los datos](#enfoque-que-se-da-a-los-datos)
 
-# 2. Sistema gestor de bases de datos
+## Concepto de SGDB
 
 - Colección de programas que permite crear y mantener una BD
 - Objetivos
 - Caracteríticas más importantes
 - Ventajas e inconvenientes
 
-# 3. SGDB en el mercado:
+## SGDB en el mercado:
 
 Libres, gratuitos y no libres, comerciales
 
@@ -28,7 +32,7 @@ Libres, gratuitos y no libres, comerciales
   - SQL Express edition. Se distribuye de forma gratuita
   - Oracle
 
-# 4. Componentes
+## Componentes
 
 - Usuarios
   - Administradores
@@ -38,7 +42,7 @@ Libres, gratuitos y no libres, comerciales
 - Software
 - Datos
 
-# 5. Lenguajes de un SGDB
+## Lenguajes de un SGDB
 
 - DDL: Definición de datos
 - DML: Manipulación de datos
@@ -46,7 +50,7 @@ Libres, gratuitos y no libres, comerciales
 - DCL: Control de datos
 - VDL: Definición de vistas
 
-# 6. Funciones de un SGDB
+## Funciones de un SGDB
 
 Las funciones principales son:
 
@@ -58,7 +62,7 @@ Las funciones principales son:
 - Respaldo: permitir hacer copias de seguridad para poder ser restauradas
 - Concurrencia: permitir y controlar accesos simultáneos a los datos
 
-# 7.	Arquitectura de un SGDB
+## Arquitectura de un SGDB
 
 La arquitectura ANSI/SPARC define 3 niveles:
 
@@ -66,7 +70,7 @@ La arquitectura ANSI/SPARC define 3 niveles:
 - Nivel externo
 - Nivel conceptual
 
-# 8. Estructura de un SGDB
+## Estructura de un SGDB
 
 Un SGDB está formado por los siguientes componentes:
 
@@ -76,18 +80,23 @@ Un SGDB está formado por los siguientes componentes:
 - Motor de ejecución
 - Diccionario de datos
 
-# 9. Tipos de sistemas
+## Tipos de sistemas
 
-- Según modelo de datos
-  - Jerárquico
-  - Modelo de red
-  - Modelo relacional
-  - Modelo orientado a objetos
-  - Modelo XML
-- Monousuario y multiusuario
-- Centralizado y distribuido
-- Enfoque que se da a los datos
-  - Tradicional
-  - Temporal
-  - Orientado a lógica
-  - Estadística
+### Según modelo de datos
+
+- Jerárquico
+- Modelo de red
+- Modelo relacional
+- Modelo orientado a objetos
+- Modelo XML
+
+### Monousuario y multiusuario
+
+### Centralizado y distribuido
+
+### Enfoque que se da a los datos
+
+- Tradicional
+- Temporal
+- Orientado a lógica
+- Estadística
