--- a/opss/36.Lamanipulacióndedatos.Operaciones.Lenguajes.Optimizacióndeconsultas..docx.md
+++ b/opss/36.Lamanipulacióndedatos.Operaciones.Lenguajes.Optimizacióndeconsultas..docx.md
@@ -1,48 +1,64 @@
-- [Introducción](#introducci%C3%B3n)
-- [Lenguajes](#lenguajes)
-- [Operaciones de selección (Select)](#operaciones-de-selecci%C3%B3n-select)
-- [Operaciones de inserción (insert)**](#operaciones-de-inserci%C3%B3n-insert)
-- [Operaciones de actualización (Update)**](#operaciones-de-actualizaci%C3%B3n-update)
-- [Operaciones de borrado (Delete)**](#operaciones-de-borrado-delete)
-- [Otras consultas**](#otras-consultas)
-- [Optimización de consultas**](#optimizaci%C3%B3n-de-consultas)
+# BD. La manipulación de datos
+
+- [BD. La manipulación de datos](#bd-la-manipulaci%C3%B3n-de-datos)
+  - [Introducción](#introducci%C3%B3n)
+  - [Lenguajes](#lenguajes)
+    - [Según posibilidad de ser utilizados independientemente](#seg%C3%BAn-posibilidad-de-ser-utilizados-independientemente)
+    - [Procedimentales y no procedimentales](#procedimentales-y-no-procedimentales)
+    - [De especificación o navegacional](#de-especificaci%C3%B3n-o-navegacional)
+  - [Operaciones de selección (Select)](#operaciones-de-selecci%C3%B3n-select)
+  - [Operaciones de inserción (insert)**](#operaciones-de-inserci%C3%B3n-insert)
+  - [Operaciones de actualización (Update)**](#operaciones-de-actualizaci%C3%B3n-update)
+  - [Operaciones de borrado (Delete)**](#operaciones-de-borrado-delete)
+  - [Otras consultas**](#otras-consultas)
+  - [Optimización de consultas**](#optimizaci%C3%B3n-de-consultas)
+    - [Proceso de ejecución consulta](#proceso-de-ejecuci%C3%B3n-consulta)
+      - [Procesado](#procesado)
+      - [Optimización](#optimizaci%C3%B3n)
+      - [Aspectos de la optimización](#aspectos-de-la-optimizaci%C3%B3n)
+      - [Tipos de optimización](#tipos-de-optimizaci%C3%B3n)
+        - [Basada en costes](#basada-en-costes)
+        - [Basada en reglas](#basada-en-reglas)
+      - [Herramientas SGDB](#herramientas-sgdb)
 
 ## Introducción
 
-    a.  La manipulación de datos
-
-    b.  Permite consultar y actualizar los datos de una BD
-
-    c.  3 tipos de operaciones de actualización: inserción, borrado y
-        modificación
+- La manipulación de datos
+- Permite consultar y actualizar los datos de una BD
+- 3 tipos de operaciones de actualización: 
+  - inserción
+  - borrado
+  - modificación
 
 ## Lenguajes
 
-    d.  Según posibilidad de ser utilizados independientemente
+### Según posibilidad de ser utilizados independientemente
 
-        i.  [Huésped]{.underline} (las instrucciones deben embeberse en
+        i.  [Huésped (las instrucciones deben embeberse en
             otro lenguaje de programación)
 
-        ii. [Autocontenidos]{.underline} (Pueden ser utilizados
+        ii. [Autocontenidos (Pueden ser utilizados
             directamente, por usuarios con pocos ocnocimientos de
             programación (SQL))
 
-        iii. [Duales]{.underline} (ambos)
+        iii. [Duales (ambos)
 
-    e.  Según detalle con el que es preciso especificar el procedimiento
+### Procedimentales y no procedimentales
 
-        iv. [Procedimentales]{.underline}
+Según detalle con el que es preciso especificar el procedimiento
 
-        v.  [No procedimentales]{.underline}
+- Procedimentales
+- No procedimentales
 
-    f.  Según manera de recuperar y o acualizar datos
+### De especificación o navegacional
 
-        vi. Lenguajes de [especificación]{.underline}: cada sentencia
-            puede recuperar o actualizar un conjunto de registros (SQL)
+Según manera de recuperar y o acualizar datos
 
-        vii. Lenguajes [navegacionales]{.underline}: cada sentencia
-            recupera o actualiza un solo registro. El programador debe
-            indicar el camino a recorrer hasta el registro buscado
+- Lenguajes de [especificación
+  - Cada sentencia puede recuperar o actualizar un conjunto de registros (SQL)
+- Lenguajes [navegacionales: 
+  - Cada sentencia recupera o actualiza un solo registro. 
+  - El programador debe indicar el camino a recorrer hasta el registro buscado
 
 ## Operaciones de selección (Select)
 
@@ -78,21 +94,18 @@
 
 ## Operaciones de inserción (insert)**
 
-    o.  Insert, into, values.
-
-    p.  Se puede insertar más de una fila en la misma sentencia
-
-    q.  Otra opción: insert + select
+- Insert, into, values.
+- Se puede insertar más de una fila en la misma sentencia
+- Otra opción: insert + select
 
 ## Operaciones de actualización (Update)**
 
-    r.  Update, set, where
+- Update, set, where
 
 ## Operaciones de borrado (Delete)**
 
-    s.  Delete, from, where, order by
-
-    t.  Diferencia con truncate
+- Delete, from, where, order by
+- Diferencia con truncate
 
 ## Otras consultas**
 
@@ -108,67 +121,55 @@
     x.  Al optimizar antes de ejecutar se elige del plan más eficiente
         para el procesamiento de la consulta
 
-    y.  Proceso de ejecución consulta
+### Proceso de ejecución consulta
 
-        xv. Procesar, optimizar, ejecutar
+- Procesado
+- Optimización
+- Ejecución
 
-        xvi. Procesar
+#### Procesado
 
-            1.  Análisis léxico y sintáctivo
+1.  Análisis léxico y sintáctivo
+2.  Validación de atributso
+3.  Representación interna de la consulta en árbol de
+    consultas
 
-            2.  Validación de atributso
+#### Optimización
 
-            3.  Representación interna de la consulta en árbol de
-                consultas
+- Para cada consulta hay varios métodos para obtener la respuesta
+- Consulta se puede traducir en varias expresiones de álgebra relacional
+- Cada expresión se puede resolver utilizando diferentes algoritmos
+- Diferentes planes de ejecución.
+  - Cada uno tiene un coste diferente.
+  - El usuario no especifica el plan de ejecución, lo hace el SGDB
 
-        xvii. Optimizar
+#### Aspectos de la optimización
 
-            1.  Para cada consulta hay varios métodos para obtener la
-                respuesta
+    a.  Intentar hallar expresión equivalente, pero más
+        eficiente
+    b.  Elegir algoritmo a utilizar y selección de índices a
+        emplear
+    c.  Ejemplo artículos y precio
 
-            2.  Consulta se puede traducir en varias expresiones de
-                álgebra relacional
+#### Tipos de optimización
 
-            3.  Cada expresión se puede resolver utilizando diferentes
-                algoritmos
+##### Basada en costes
 
-            4.  Diferentes planes de ejecución. Cada uno tiene un coste
-                diferente. El usuario no especifica el plan de
-                ejecución, lo hace el SGDB
+- Estimar coste de cada plan
+- Seleccionar el menos costoso
 
-            5.  Aspectos de la optimización
+##### Basada en reglas
 
-                a.  Intentar hallar expresión equivalente, pero más
-                    eficiente
+Emplear reglas para la transformación de consultas:
 
-                b.  Elegir algoritmo a utilizar y selección de índices a
-                    emplear
+- Selecciones tan pronto como sea posible
+- Selecciones sobre atributos indexados antes que no indexados
+- Proyecciones tan pronto como sea posible
+- Combinaciones más restrictivas en primer lugar
+- Evitar proyecciones redundantes
+- Utilizar distinct solo cuando sea imprecindible
 
-                c.  Ejemplo artículos y precio
+#### Herramientas SGDB
 
-            6.  Tipos de optimización
-
-                d.  Basada en costes. Estimar coste de cada plan y
-                    seleccionar el menos costoso
-
-                e.  Basada en reglas. Emplear reglas para la
-                    transformación de consultas.
-
-                    i.  Selecciones tan pronto como sea posible
-
-                    ii. Selecciones sobre atributos indexados antes que
-                        no indexados
-
-                    iii. Proyecciones tan pronto como sea posible
-
-                    iv. Combinaciones más restrictivas en primer lugar
-
-                    v.  Evitar proyecciones redundantes
-
-                    vi. Utilizar distinct solo cuando sea imprecindible
-
-            7.  Herramientas SGDB
-
-                f.  Explain + sentencia: información sobre las consultas
-
-                g.  Creación de índices
+    f.  Explain + sentencia: información sobre las consultas
+    g.  Creación de índices
