--- a/opss/39.Lenguajesparaladefiniciónymanipulacióndedatosensistemasdebasededatosrelacionales.Tipos.Características.LenguajeSQL.-copia.docx.md
+++ b/opss/39.Lenguajesparaladefiniciónymanipulacióndedatosensistemasdebasededatosrelacionales.Tipos.Características.LenguajeSQL.-copia.docx.md
@@ -1,54 +1,48 @@
 - [Introducción](#introducci%C3%B3n)
-- [Schema / Database##](#schema--database)
-- [Domain##](#domain)
+- [Schema / Database](#schema--database)
+- [Domain](#domain)
 - [Table##](#table)
 - [View##](#view)
-- [Assertion:## se utiliza para crear restricciones que hacen referencia](#assertion-se-utiliza-para-crear-restricciones-que-hacen-referencia)
+- [Assertion](#assertion)
+- [Transacciones](#transacciones)
+- [Grant](#grant)
+- [Revoke](#revoke)
 
 ## Introducción
 
 Lenguaje de definición de datos
 
-Create
-
-Drop
-
-Alter
+- Create
+- Drop
+- Alter
 
 Lenguaje de manipulación de datos
 
-Insert
-
-Select
-
-Update
-
-Delete
+- Insert
+- Select
+- Update
+- Delete
 
 Lenguaje de control de datos
 
-Grant
-
-Revoke
+- Grant
+- Revoke
 
 Lenguaje SQL
 
 Sentencias de definición
 
-## Schema / Database## 
+## Schema / Database
 
-Agrupa varios elementos de una base de datos y los asocia a un usuario
+- Agrupa varios elementos de una base de datos y los asocia a un usuario
 (crea una base de datos)
+- Create / drop schema + authorization
 
-Create / drop schema + authorization
+## Domain
 
-## Domain## 
-
-Permite crear tipos de datos nuevos con ciertas restricciones
-
-Por ejemplo, podemos crear un tipo de datos código postal, email
-
-Create / drop / alter
+- Permite crear tipos de datos nuevos con ciertas restricciones
+- Por ejemplo, podemos crear un tipo de datos código postal, email
+- Create / drop / alter
 
 ## Table## 
 
@@ -58,12 +52,11 @@ Create/drop/alter
 
 Create/drop
 
-## Assertion:##  se utiliza para crear restricciones que hacen referencia
-a una o más de una tabla.
+## Assertion
 
-Ejemplo: un empleado no puede tener un salario mayor que su jefe
-
-Create / drop
+- Se utiliza para crear restricciones que hacen referencia a una o más de una tabla.
+- Ejemplo: un empleado no puede tener un salario mayor que su jefe
+- Create / drop
 
 Sentencias de manipulación
 
@@ -79,28 +72,21 @@ Update
 
 Sentencias de control
 
-Transacciones
+## Transacciones
 
 Set transaction
 
-[Commit]{.underline}: Confirma los cambios producidos
+- [Commit]{.underline}: Confirma los cambios producidos
+- [Rollback]{.underline}: deshace los cambios
 
-[Rollback]{.underline}: deshace los cambios
+## Grant
 
-[Work]{.underline}
-
-Grant
-
-Da ciertos [privilegios]{.underline} sobre sobre ciertos
+- Da ciertos [privilegios]{.underline} sobre sobre ciertos
 [objetos]{.underline} a algunos usuarios
-
 Podemos otorgar derecho a un usuario para autorizar a otros
 
-Revoke
+## Revoke
 
-Desautoriza privilegios
-
-Podemos eliminar derecho a autorizar a otro usuario
-
-Permite desautorizar en cascada. Al desautorizar a un usuario, todos los
-usuarios a los que el haya autorizado quedan desautorizados
+- Desautoriza privilegios
+- Podemos eliminar derecho a autorizar a otro usuario
+- Permite desautorizar en cascada. Al desautorizar a un usuario, todos los usuarios a los que el haya autorizado quedan desautorizados
