--- a/opss/40.Diseñodebasesdedatosrelacionales.docx.md
+++ b/opss/40.Diseñodebasesdedatosrelacionales.docx.md
@@ -1,47 +1,53 @@
-- [Introducción##](#introducci%C3%B3n)
-- [Fases del diseño##](#fases-del-dise%C3%B1o)
-- [Diseño conceptual##](#dise%C3%B1o-conceptual)
-- [Diseño lógico##](#dise%C3%B1o-l%C3%B3gico)
-- [Normalización. Formas normales##](#normalizaci%C3%B3n-formas-normales)
-- [Diseño físico. Optimización##](#dise%C3%B1o-f%C3%ADsico-optimizaci%C3%B3n)
+# Diseño de BD relacionales
+- [Diseño de BD relacionales](#dise%C3%B1o-de-bd-relacionales)
+  - [Introducción](#introducci%C3%B3n)
+  - [Fases del diseño](#fases-del-dise%C3%B1o)
+  - [Diseño conceptual](#dise%C3%B1o-conceptual)
+  - [Diseño lógico](#dise%C3%B1o-l%C3%B3gico)
+    - [Transformar E/R a tablas](#transformar-er-a-tablas)
+    - [Transform atributos en campos de tablas](#transform-atributos-en-campos-de-tablas)
+    - [Restricciones de integridad](#restricciones-de-integridad)
+  - [Normalización](#normalizaci%C3%B3n)
+    - [Formas normales](#formas-normales)
+    - [Ejemplo de normalización](#ejemplo-de-normalizaci%C3%B3n)
+  - [Diseño físico. Optimización](#dise%C3%B1o-f%C3%ADsico-optimizaci%C3%B3n)
+  - [Bibliografía](#bibliograf%C3%ADa)
 
-## Introducción## 
+## Introducción
 
-## Fases del diseño## 
+## Fases del diseño
 
-Diseño conceptual (Modelo E-R)
+- Diseño conceptual (Modelo E-R)
+- Diseño lógico (Pasar a tablas -- normalización)
+- Diseño físico
+  - Generar esquema físico de BD sobre el SGDB. 
+  - Definir tablas y campos
+  - Imponer restricciones de integridad
+  - Definir índices
 
-Diseño lógico (Pasar a tablas -- normalización)
+## Diseño conceptual
 
-Diseño físico: generar esquema físico de BD sobre el SGDB. Definir
-tablas y campos, imponer restricciones de integridad y definir índices
+Conceptos:
 
-## Diseño conceptual## 
-
-Conceptos
-
-Entidades
-
-Relaciones. Grado de una relación
-
-Atributos (multivalorados, compuestos)
+- Entidades
+- Relaciones. Grado de una relación
+- Atributos (multivalorados, compuestos)
 
 Diagramas entidad-relación
 
-Elección de los tipos de entidad y sus atributos
+- Elección de los tipos de entidad y sus atributos 
+- Elección de tipos de relación
 
-Elección de tipos de relación
-
-## Diseño lógico## 
+## Diseño lógico
 
 Del modelo E/R al modelo lógico (esquema E/R a esquema relacional)
 
-Transform E/R a tablas
+### Transformar E/R a tablas
 
 Para cada entidad se crea una relación con el mismo nombre y conjunto de
 atributos
 
-Transform atributos en campos de tablas
+### Transform atributos en campos de tablas
 
 Para cada relación se crea una relación que tiene atributos de las
 entidades relacionadas
@@ -50,52 +56,41 @@ Relaciones tienen clave compuesta de las entidades que relaciona
 
 Claves
 
-Restricciones de integridad
+### Restricciones de integridad
 
-Integridad referencial: no puede aparecer un DNI matrícula que no esté
-en DNI de alumnos
+- Integridad referencial: 
+  - No puede aparecer un DNI matrícula que no esté en DNI de alumnos
+- Participación total
+  - Todos los valores de DNI de Alumnos debe aparecer en DNI de matrícula
 
-Participación total: todos los valores de DNI de Alumnos debe aparecer
-en DNI de matrícula
+## Normalización
 
-## Normalización. Formas normales## 
+### Formas normales
 
-Primera FN
-
-Segunda FN
-
-Tercera FN
-
-Forma normal de Boyce-Codd
-
-Cuarta FN
-
-Quinta FN
+- Primera FN
+- Segunda FN
+- Tercera FN
+- Forma normal de Boyce-Codd
+- Cuarta FN
+- Quinta FN
 
 ¿Es necesario llegar a la quinta FN?
 
-Ejemplo de normalización
+### Ejemplo de normalización
 
-Primera
+- Primera
+- Segunda
+- Tercera
 
-Segunda
+## Diseño físico. Optimización 
 
-Tercera
+- Índices
+  - Elección de índices
+  - Índices en SQL
+- Vistas
+- Estadísticas
+- Usuarios y permisos
 
-## Diseño físico. Optimización## 
-
-Índices
-
-Elección de índices
-
-Índices en SQL
-
-Vistas
-
-Estadísticas
-
-Usuarios y permisos
-
-Bibliografía
+## Bibliografía
 
 Forth y Silberschatdz "Fundamentos de bases de datos" (McGraw-hill)
