--- a/opss/5.Microprocesadores.Estructura.Tipos.Comunicacionconelexterior.docx.md
+++ b/opss/5.Microprocesadores.Estructura.Tipos.Comunicacionconelexterior.docx.md
@@ -9,7 +9,7 @@
   - [Comunicación con el exterior](#comunicaci%C3%B3n-con-el-exterior)
     - [Comunicación con memoria](#comunicaci%C3%B3n-con-memoria)
     - [Comunicación con puertos E/S](#comunicaci%C3%B3n-con-puertos-es)
-    - [Chipsets (puente norte, puente sur, etc(](#chipsets-puente-norte-puente-sur-etc)
+    - [Chipsets](#chipsets)
     - [sockets](#sockets)
     - [Procesadores actuales](#procesadores-actuales)
 
@@ -56,7 +56,11 @@
 - E/S por interrupción
 - Acceso directo a memoria (DMA)
 
-### Chipsets (puente norte, puente sur, etc(
+### Chipsets 
+
+- Puente norte
+- Puente sur
+- etc.
 
 ### sockets
 
