--- a/opss/6.Sistemasdealmacenamientoexternos.docx.md
+++ b/opss/6.Sistemasdealmacenamientoexternos.docx.md
@@ -2,11 +2,18 @@
 - [Jerarquía de memoria##](#jerarqu%C3%ADa-de-memoria)
 - [Características y funcionamiento##](#caracter%C3%ADsticas-y-funcionamiento)
 - [Soportes magnéticos##](#soportes-magn%C3%A9ticos)
-- [Soportes ópticos##](#soportes-%C3%B3pticos)
-- [Memorias de estado sólido##](#memorias-de-estado-s%C3%B3lido)
-- [Interfaces de acceso##](#interfaces-de-acceso)
-- [Almacenamiento en red##](#almacenamiento-en-red)
-- [Almacenamiento en la nube##](#almacenamiento-en-la-nube)
+  - [Disco duro](#disco-duro)
+- [Soportes ópticos](#soportes-%C3%B3pticos)
+  - [CD](#cd)
+  - [DVD](#dvd)
+  - [Blu-ray](#blu-ray)
+- [Memorias de estado sólido](#memorias-de-estado-s%C3%B3lido)
+  - [Pen-drive](#pen-drive)
+  - [Tarjetas de memoria](#tarjetas-de-memoria)
+  - [Discos duros SSD](#discos-duros-ssd)
+- [Interfaces de acceso](#interfaces-de-acceso)
+- [Almacenamiento en red](#almacenamiento-en-red)
+- [Almacenamiento en la nube](#almacenamiento-en-la-nube)
 
 ## Sistemas de almacenamiento externo## 
 
@@ -14,126 +21,97 @@ Características de la memoria externa
 
 ## Jerarquía de memoria## 
 
-Registros
-
-Memoria cache
-
-Memoria principal
-
-Memoria secundaria
-
-Memoria terciaria
+- Registros
+- Memoria cache
+- Memoria principal
+- Memoria secundaria
+- Memoria terciaria
 
 ## Características y funcionamiento## 
 
-Volatilidad
-
-Acceso aleatorio o secuencial
-
-Modificabilidad
-
-Capacidad
-
-Tiempo de acceso
-
-Precio
-
-Tecnología
+- Volatilidad
+- Acceso aleatorio o secuencial
+- Modificabilidad
+- Capacidad
+- Tiempo de acceso
+- Precio
+- Tecnología
 
 ## Soportes magnéticos## 
 
-Lectura y escritura
+- Lectura y escritura
+- Cintas magnéticas
+- Disquetes
 
-Cintas magnéticas
-
-Disquetes
-
-Disco duro
+### Disco duro
 
 Partes
 
-Cabezales
-
-Platos
-
-Caras
-
-Pistas
-
-Cilindros
-
-Sectores
+- Cabezales
+- Platos
+- Caras
+- Pistas
+- Cilindros
+- Sectores
 
 Ventajas e inconvenientes
 
-Direccionamiento CHS o LBA
+Direccionamiento
+
+- CHS
+- LBA
 
 Tiempos
 
-Tiempo de acceso
+- Tiempo de acceso
+  - Tiempo de latencia
+  - Tiempo de búsqueda
+- Tiempo de transferencia
 
-Tiempo de latencia
+## Soportes ópticos 
 
-Tiempo de búsqueda
+### CD
 
-Tiempo de transferencia
+- Formato de un sector
+- Tipos
 
-## Soportes ópticos## 
+### DVD
 
-CD
+- Tecnología
+- Capas y caras
+- Tipos
 
-Formato de un sector
+### Blu-ray
 
-Tipos
+- Tecnología
+- Tipos
 
-DVD
+## Memorias de estado sólido
 
-Tecnología
+### Pen-drive
 
-Capas y caras
+Partes:
 
-Tipos
+- Conector USB
+- Microcontrolador
+- Memoria
+- Oscilador
 
-Blu-ray
+### Tarjetas de memoria
 
-Tecnología
+### Discos duros SSD
 
-Tipos
+## Interfaces de acceso
 
-## Memorias de estado sólido## 
+- IDE
+- SATA
+- SCSI
+- Externos: USB, firewire
 
-Pen-drive
+## Almacenamiento en red
 
-Partes
+- DAS: dispositivo conectado al servidor
+- NAS: dispositivo conectado a la red
+- SAN: red de dispositivos de almacenamiento
 
-Conector USB
-
-Microcontrolador
-
-Memoria
-
-Oscilador
-
-Tarjetas de memoria
-
-Discos duros SSD
-
-## Interfaces de acceso## 
-
-IDE
-
-SATA
-
-SCSI
-
-Externos: USB, firewire
-
-## Almacenamiento en red## 
-
-DAS: dispositivo conectado al servidor
-
-NAS: dispositivo conectado a la red
-
-SAN: red de dispositivos de almacenamiento
-
-## Almacenamiento en la nube## 
+## Almacenamiento en la nube
