--- a/opss/62.Arquitecturasdesistemasdecomunicaciones.Arquitecturasbasadasenniveles.Estándares..docx.md
+++ b/opss/62.Arquitecturasdesistemasdecomunicaciones.Arquitecturasbasadasenniveles.Estándares..docx.md
@@ -1,75 +1,90 @@
-- [Estándares##](#est%C3%A1ndares)
-- [Organismos##](#organismos)
+# Arquitecturas de sistemas de comunicaciones
 
-Introducción
+- [Arquitecturas de sistemas de comunicaciones](#arquitecturas-de-sistemas-de-comunicaciones)
+  - [Introducción](#introducci%C3%B3n)
+  - [Arquitectura de los sistemas de comunicación](#arquitectura-de-los-sistemas-de-comunicaci%C3%B3n)
+  - [Modelo TCP/IP](#modelo-tcpip)
+    - [ARPA](#arpa)
+    - [Finalidades](#finalidades)
+    - [4 niveles](#4-niveles)
+  - [Modelo OSI](#modelo-osi)
+  - [Correspondencia TCP/IP y OSI](#correspondencia-tcpip-y-osi)
+  - [Niveles](#niveles)
+  - [Funciones](#funciones)
+    - [Físico](#f%C3%ADsico)
+    - [Enlace](#enlace)
+    - [Red](#red)
+    - [Transporte](#transporte)
+    - [Sesión](#sesi%C3%B3n)
+    - [Presentación](#presentaci%C3%B3n)
+    - [Aplicación](#aplicaci%C3%B3n)
+  - [Estándares](#est%C3%A1ndares)
+    - [Concepto](#concepto)
+    - [Ventajas de los estándares](#ventajas-de-los-est%C3%A1ndares)
+    - [Tipos de estandares](#tipos-de-estandares)
+  - [Organismos](#organismos)
+    - [Tipos](#tipos)
+    - [Organismos oficiales](#organismos-oficiales)
+      - [Internacionales](#internacionales)
+      - [Europeos](#europeos)
+      - [Españoles](#espa%C3%B1oles)
+  
+## Introducción
 
-Arquitectura de los sistemas de comunicación
+## Arquitectura de los sistemas de comunicación
 
 Modelos, principio de modularidad, consideraciones a tener en cuenta
 
-Modelo TCP/IP
+## Modelo TCP/IP
 
-ARPA
+### ARPA
 
-Finalidades
+### Finalidades
 
-Consecución de ruta óptima
+- Consecución de ruta óptima
+- Control de la comunicación
 
-Control de la comunicación
+### 4 niveles
 
-4 niveles
-
-Subred
-
-Interred
-
-Transporte
-
-Aplicación
+- Subred
+- Interred
+- Transporte
+- Aplicación
 
 Subred: Dar conectividad a redes de diferente tecnología
 
 Transporte: Dos tipos de servicio (orientado o no a conexión)
 
-Modelo OSI
+## Modelo OSI
 
-Modelo abierto, estandarización
+- Modelo abierto, estandarización
+- Modularidad
+- No implementaciones prácticas 100%
+- Define 7 niveles
 
-Modularidad
+## Correspondencia TCP/IP y OSI
 
-No implementaciones prácticas 100%
+## Niveles
 
-Define 7 niveles
+- Comunicación horizontal
+- Comunicación vertical
+- Interfaz entre niveles
+- Información: datos y cabecera
+- SDU, PDU, IDU y ICI
+- Encapsulamiento
+- Punto de acceso al servicio
 
-Correspondencia TCP/IP y OSI
+## Funciones
 
-Niveles
+### Físico
 
-Comunicación horizontal
-
-Comunicación vertical
-
-Interfaz entre niveles
-
-Información: datos y cabecera
-
-SDU, PDU, IDU y ICI
-
-Encapsulamiento
-
-Punto de acceso al servicio
-
-Funciones
-
-Físico
-
-Enlace
+### Enlace
 
 Tramas
 
 Dirección MAC
 
-Red
+### Red
 
 IP. Paquetes o datagramas. Cabecera IP
 
@@ -79,7 +94,7 @@ Circuitos virtuales
 
 Control de error y flujo
 
-Transporte
+### Transporte
 
 TCP y UDP
 
@@ -89,7 +104,7 @@ No orientado a conexión
 
 Puertos y multiplexión
 
-Sesión
+### Sesión
 
 Control de diálogo
 
@@ -97,79 +112,63 @@ Agrupamiento
 
 Recuperación
 
-Presentación
+### Presentación
 
 Codificación de caracteres
 
 ASN.1 (SNMP)
 
-Aplicación
+### Aplicación
 
-Cifrado de datos
+- Cifrado de datos
+- Compresión
+- Formateo de datos
+- HTTP, SMTP, POP, FTP
 
-Compresión
+## Estándares
 
-Formateo de datos
-
-HTTP, SMTP, POP, FTP
-
-## Estándares## 
-
-Concepto
+### Concepto
 
 Conjunto de normas que regulan la transmisión en los sistemas
 deomunicación
 
-Voltajes, formatos de datos, tipo de conector, etc.
+- Voltajes
+- Formatos de datos
+- Tipo de conector, etc.
 
-Ventajas de los estándares
+### Ventajas de los estándares
 
-Permiten compatiblidad entre dispositivos de diferentes fabricantes sin
-necesidad de adaptadores
+- Permiten compatiblidad entre dispositivos de diferentes fabricantes sin necesidad de adaptadores
+- Mayor mercado de fabricantes y productos
+- Reducen costes
+- Evitan creación de arquitecturas cerradadas que lleven a monopolios
 
-Mayor mercado de fabricantes y productos
+### Tipos de estandares
 
-Reducen costes
+- De facto: estandares que pese a no ser oficiales gozan de una grab adaptacion y estan muy extendidos
+- De iure: definidos por un organismo
+- Propietarios
 
-Evitan creación de arquitecturas cerradadas que lleven a monopolios
+## Organismos
 
-Tipos de estandares
+### Tipos
 
-De facto: estandares que pese a no ser oficiales gozan de una grap
-adaptacion y estan muy extendidos
+- Consorcios de fabricantes (Wifi alliance)
+- Organismos oficiales
 
-De iure: definidos por un organismo
+### Organismos oficiales
 
-Propietarios
+#### Internacionales
 
-## Organismos## 
+- ITU (ITU-T, ITU-R)
+- IEEE: Estándar 802 (estandares LAN y MAN)
+- ISO: Modelo OSI
+- IETF: RFC
 
-Tipos
+#### Europeos
 
-Consorcios de fabricanes (Wifi alliance)
+- ETSI (gsm)
 
-Organismos oficiales
+#### Españoles
 
-Organismos ofociales
-
-Internacionales
-
-ITU
-
-ITU-T
-
-ITU-R
-
-IEEE: Estándar 802 (estandares LAN y MAN)
-
-ISO: Modelo OSI
-
-IETF: RFC
-
-Europeos
-
-ETSI (gsm)
-
-Españoles
-
-AENOR
+- AENOR
