--- a/opss/64.Funcionesyserviciosdelniveldeenlace.Técnicas.Protocolos.docx.md
+++ b/opss/64.Funcionesyserviciosdelniveldeenlace.Técnicas.Protocolos.docx.md
@@ -6,6 +6,8 @@
   - [Funciones del nivel de enlace](#funciones-del-nivel-de-enlace)
   - [Servicios##](#servicios)
   - [Control d\'accés al medi##](#control-dacc%C3%A9s-al-medi)
+    - [Determinista (per Torns)](#determinista-per-torns)
+    - [No determinista (el primer que arriba)](#no-determinista-el-primer-que-arriba)
   - [Colisions##](#colisions)
   - [Protocolos##](#protocolos)
 
@@ -92,7 +94,7 @@ software
 
 ## Control d\'accés al medi## 
 
-[Determinista (per Torns)]{.underline}
+### Determinista (per Torns)
 
 Creació de Torns (tokens). Token ring o FDDI. Rotació cicular
 
@@ -103,7 +105,7 @@ Un paquet especial circula per l\'anell.
 L\'ordinador que l\'Agafa olla transmetre tats. El sol · licitant
 Acabat, l\'allibera
 
-[No determinista (el primer que arriba)]{.underline}
+### No determinista (el primer que arriba)
 
 Esquema FCFS. Accés per contenció
 
@@ -121,17 +123,14 @@ S'espera un temps aleatori i tornen a transmetre
 
 Dominis de colisió:
 
-segment físic d'una xarxa on els paquets poden xocar.
-
-Dos ordinadors transmeten en un medi compartit
+- Segment físic d'una xarxa on els paquets poden xocar.
+- Dos ordinadors transmeten en un medi compartit
 
 Tipus de col·lisions
 
-Local
-
-Remota
-
-Endarrerida
+- Local
+- Remota
+- Endarrerida
 
 ## Protocolos## 
 
