--- a/opss/7.DispositivosperiféricosdeES.Característicasyfuncionamiento.docx.md
+++ b/opss/7.DispositivosperiféricosdeES.Característicasyfuncionamiento.docx.md
@@ -1,4 +1,26 @@
-## Introducción## 
+# Dispositivos periféricos de E/S
+
+- [Dispositivos periféricos de E/S](#dispositivos-perif%C3%A9ricos-de-es)
+  - [Introducción](#introducci%C3%B3n)
+  - [Características](#caracter%C3%ADsticas)
+  - [Tipos de periféricos##](#tipos-de-perif%C3%A9ricos)
+  - [Unidad de E/S##](#unidad-de-es)
+    - [Tipos](#tipos)
+      - [E/S mapeada en memoria](#es-mapeada-en-memoria)
+      - [E/S aislada](#es-aislada)
+    - [Transferencia de datos](#transferencia-de-datos)
+      - [E/S programada](#es-programada)
+      - [E/S por interrupción](#es-por-interrupci%C3%B3n)
+      - [E/S con DMA](#es-con-dma)
+  - [Mecanismo de interrupción](#mecanismo-de-interrupci%C3%B3n)
+    - [Tipos de interrupciones](#tipos-de-interrupciones)
+  - [Perifericos de entrada##](#perifericos-de-entrada)
+  - [Periféricos de salida##](#perif%C3%A9ricos-de-salida)
+  - [Periféricos de entrada y salida##](#perif%C3%A9ricos-de-entrada-y-salida)
+  - [Puertos de comunicaciones](#puertos-de-comunicaciones)
+  - [Características y funcionamiento](#caracter%C3%ADsticas-y-funcionamiento)
+
+## Introducción
 
 Ordenador no puede estar solo formado por CPU y memoria. Necesidad de
 conectar con el mundo exterior
@@ -8,7 +30,7 @@ Para ello se utilizan periféricos conectados a un sistema de E/S
 Este sistema se encarga de adaptar los dispositivos externos para
 adaptarlos al bus del sistema
 
-## Características## 
+## Características
 
 Diversidad de periféricos: velocidad, diversidad, formatos de datos
 
@@ -20,16 +42,6 @@ bus del sistema
 [Según el uso:]{.underline} almacenamiento, entrada y salida de datos,
 comunicaciones
 
-- [Introducción##](#introducci%C3%B3n)
-- [Características##](#caracter%C3%ADsticas)
-- [Tipos de periféricos##](#tipos-de-perif%C3%A9ricos)
-- [Unidad de E/S##](#unidad-de-es)
-- [Mecanismo de interrupción##](#mecanismo-de-interrupci%C3%B3n)
-- [Perifericos de entrada##](#perifericos-de-entrada)
-- [Periféricos de salida##](#perif%C3%A9ricos-de-salida)
-- [Periféricos de entrada y salida##](#perif%C3%A9ricos-de-entrada-y-salida)
-- [Puertos de comunicaciones##](#puertos-de-comunicaciones)
-- [Características y funcionamiento##](#caracter%C3%ADsticas-y-funcionamiento)
 
 [Según la dirección de los datos]{.underline}: Entrada, salida, entrada
 y salida
@@ -38,91 +50,66 @@ y salida
 
 Chipset northbridge y southbridge
 
-Tipos
+### Tipos
 
-E/S mapeada en memoria
+#### E/S mapeada en memoria
 
-Se accede como si fuera acceso a un dato de memoria principal
+- Se accede como si fuera acceso a un dato de memoria principal
+- Periféricos se integran como si fueran parte de la memoria
+- Se desaprovecha espacio de instrucciones, pero se aprovechan los juegos de instrucciones
 
-Periféricos se integran como si fueran parte de la memoria
+#### E/S aislada
 
-Se desaprovecha espacio de instrucciones, pero se aprovechan los juegos
-de instrucciones
+- Acceso a E/S contemplado en arquitectura con instrucciones específicas
+- Un mapa de memoria: uno para memoria principal y otro para E/S
 
-E/S aislada
+### Transferencia de datos
 
-Acceso a E/S contemplado en arquitectura con instrucciones específicas
+#### E/S programada
 
-Un mapa de memoria: uno para memoria principal y otro para E/S
-
-Transferencia de datos
-
-E/S programada
-
-CPU lleva control absoluto de E/S: inicia y llevo a cabo la
+- CPU lleva control absoluto de E/S: inicia y llevo a cabo la
 transferencia
+- Se dedica por completo a E/S. Poco eeficiente. Hardware mínimo
 
-Se dedica por completo a E/S. Poco eeficiente. Hardware mínimo
+#### E/S por interrupción
 
-E/S por interrupción
+- CPU va ejecutando instrucciones y al finalizar cada instrucción comprueba si se han producido interrupciones
+- Guarda estado de programa, ejecuta rutina de servicio correspondiente para hacer las operaciones de transferencia de datos
+- Continúa ejecutando el programa que se estaba ejecutando antes
 
-CPU va ejecutando instrucciones y al finalizar cada instrucción
-comprueba si se han producido interrupciones
+#### E/S con DMA
 
-Guarda estado de programa, ejecuta rutina de servicio correspondiente
-para hacer las operaciones de transferencia de datos
+- Procesador especializado en transferencias grandes desde periféricos a memoria
+- Es programable, hay que decirle dirección del E/S y puerto, posición en memoria principa, tamaño y si la transferencia es lectura o escritura
+- Al finalizar, el DMA avisa mediante interrupción
 
-Continúa ejecutando el programa que se estaba ejecutando antes
+## Mecanismo de interrupción
 
-E/S con DMA
+- Bus control contiene líneas para interrupciones
+- Circuito integrado en placa base se encarga de manejar interrupciones (incluído en el chipset)
+- IRQ asignados a dispositivos que necesitan mucha atención del procesador
+- Líneas IRQ (16 antes, ahora 24). Cuando dispositivo necesita atención envía señal por líne IRQ
 
-Procesador especializado en transferencias grandes desde periféricos a
-memoria
+### Tipos de interrupciones
 
-Es programable, hay que decirle dirección del E/S y puerto, posición en
-memoria principa, tamaño y si la transferencia es lectura o escritura
-
-Al finalizar, el DMA avisa mediante interrupción
-
-## Mecanismo de interrupción## 
-
-Bus control contiene líneas para interrupciones
-
-Circuito integrado en placa base se encarga de manejar interrupciones
-(incluído en el chipset)
-
-IRQ asignados a dispositivos que necesitan mucha atención del procesador
-
-Líneas IRQ (16 antes, ahora 24). Cuando dispositivo necesita atención
-envía señal por líne IRQ
-
-Tipos de interrupciones
-
-Interrupciones por hardware
-
-Interrupciones por software
-
-Excepciones
+- Interrupciones por hardware
+- Interrupciones por software
+- Excepciones
 
 ## Perifericos de entrada## 
 
 Teclado
 
-Mecánico
-
-Capacitivo
-
-Laser
-
-Óptico
+- Mecánico
+- Capacitivo
+- Laser
+- Óptico
 
 Ratón
 
-Mecánico
-
-Óptico
-
-Trackpad / Touchapd
+- Mecánico
+- Óptico
+- Trackpad / Touchapd
 
 ## Periféricos de salida## 
 
@@ -160,18 +147,14 @@ Internos / externos
 
 Pendrive / modem 3G
 
-## Puertos de comunicaciones## 
+## Puertos de comunicaciones
 
-Puertos serie y paralelo
+- Puertos serie y paralelo
+- Puerto USB y Firewire
 
-Puerto USB y Firewire
+## Características y funcionamiento
 
-## Características y funcionamiento## 
-
-Traducción usuario - máquina
-
-Transformación analógica -- digital
-
-Asíncrona
-
-Velocidad lenta
+- Traducción usuario - máquina
+- Transformación analógica digital
+- Asíncrona
+- Velocidad lenta
