--- a/opss/15.Sistemasoperativos.Componentes.Estructura.Funciones.Tipos.docx.md
+++ b/opss/15.Sistemasoperativos.Componentes.Estructura.Funciones.Tipos.docx.md
@@ -1,122 +1,107 @@
+# SO. Componentes y estructura
 
-- [Sistemas operativos##](#sistemas-operativos)
-- [Componentes##](#componentes)
-- [Estructura##](#estructura)
-- [Funciones primordiales del SO##](#funciones-primordiales-del-so)
-- [Tipos##](#tipos)
+- [SO. Componentes y estructura](#so-componentes-y-estructura)
+  - [Sistemas operativos](#sistemas-operativos)
+  - [Componentes](#componentes)
+    - [Gestión de procesos](#gesti%C3%B3n-de-procesos)
+    - [Entrada/salida](#entradasalida)
+    - [Gestión de memoria](#gesti%C3%B3n-de-memoria)
+    - [Gestión del sistema de archivos](#gesti%C3%B3n-del-sistema-de-archivos)
+      - [Estructura](#estructura)
+      - [Funciones](#funciones)
+  - [Estructura](#estructura-1)
+    - [Sistema monitor monolítico](#sistema-monitor-monol%C3%ADtico)
+    - [Sistemas kernel](#sistemas-kernel)
+    - [Sistemas estructurados jerárquicamente](#sistemas-estructurados-jer%C3%A1rquicamente)
+  - [Funciones primordiales del SO](#funciones-primordiales-del-so)
+    - [Carga inicial del sistema](#carga-inicial-del-sistema)
+  - [Tipos](#tipos)
 
-## Sistemas operativos## 
+## Sistemas operativos
 
 Estructura de niveles
 
-Lógica digital
+- Lógica digital
+- Microprogramación
+- Lenguaje máquina
+- Sistema operativo
+- Lenguaje ensamblador
+- Lenguaje de alto nivel
+- Nivel de aplicación
 
-Microprogramación
+## Componentes
 
-Lenguaje máquina
+### Gestión de procesos
 
-Sistema operativo
+### Entrada/salida
 
-Lenguaje ensamblador
-
-Lenguaje de alto nivel
-
-Nivel de aplicación
-
-## Componentes## 
-
-Gestión de procesos
-
-Entrada/salida
-
-Gestión de memoria
+### Gestión de memoria
 
 Características
 
-Protección
-
-Compartición
+- Protección
+- Compartición
 
 Modelos
 
-Modelo de máquina desnuda
+- Modelo de máquina desnuda
+- Modelo de monitor monolítico o residente
 
-Modelo de monitor monolítico o residente
+### Gestión del sistema de archivos
 
-Gestión del sistema de archivos
-
-Estructura
+#### Estructura
 
 Directorios, archivos
 
-Funciones
+#### Funciones
 
-Crear/modificar/borrar archivos
+- Crear/modificar/borrar archivos
+- Crear/modificar/borrar directorios
+- Compartición de archivos
+- Permisos
+- Hacer procesos transparentes al usuario
 
-Crear/modificar/borrar directorios
+## Estructura
 
-Compartición de archivos
+### Sistema monitor monolítico
 
-Permisos
+- Gran bloque con todas las funcionalidades del sistema
+- Útil en sistemas pequeños y sencillos
 
-Hacer procesos transparentes al usuario
+### Sistemas kernel
 
-## Estructura## 
+- Funcionalidades del núcleo se reducen al minimo
+- Procesos de sistema pueden ejecutarse en modo usuario
+- Aumenta fiabilidad
 
-Sistema monitor [monolíticos]{.underline}:
+### Sistemas estructurados jerárquicamente
 
-Gran bloque con todas las funcionalidades del sistema
+- Estructura de capas. 
+- Mejor mantenimiento y actualización
 
-Útil en sistemas pequeños y sencillos
+## Funciones primordiales del SO
 
-Sistemas [kernel]{.underline}
+- Gestión de interrupciones
+- Compartición de la CPU entre distintos procesos
+- Estados de procesos y transición
+- Comunicación entre procesos
+- Carga inicial del sistema
 
-Funcionalidades del núcleo se reducen al minimo
+### Carga inicial del sistema
 
-Procesos de sistema pueden ejecutarse en modo usuario
+- Alimentación
+- Registros internos de CPU
+- Comprobación de memoria ROM
+- Test de memoria RAM
+- Comprobación de hardware
+- Cargar en RAM programa de arranque del SO
+- Cargar el SO
 
-Aumenta fiabilidad
+## Tipos
 
-Sistemas estructurados [jerárquicamente]{.underline}
-
-Estructura de capas. Mejor mantenimiento y actualización
-
-## Funciones primordiales del SO## 
-
-Gestión de interrupciones
-
-Compartición de la CPU entre distintos procesos
-
-Estados de procesos y transición
-
-Comunicación entre procesos
-
-Carga inicial del sistema
-
-Alimentación
-
-Registros internos de CPU
-
-Comprobación de memoria ROM
-
-Test de memoria RAM
-
-Comprobación de hardware
-
-Cargar en RAM programa de arranque del SO
-
-Cargar el SO
-
-## Tipos## 
-
-Monousuario / multiusuario
-
-Monotarea / multitarea
-
-Centralizado / distribuido
-
-Interfaz gráfica / menú / comandos
-
-Sistemas operativos en tiempo real
-
-Sistemas operativos de red
+- Monousuario / multiusuario
+- Monotarea / multitarea
+- Centralizado / distribuido
+- Interfaz gráfica / menú / comandos
+- Sistemas operativos en tiempo real
+- Sistemas operativos de red
