--- a/opss/19.Sistemasoperativos.Gestiondearchivosydispositivos-copia.docx.md
+++ b/opss/19.Sistemasoperativos.Gestiondearchivosydispositivos-copia.docx.md
@@ -1,130 +1,115 @@
-- [Gestión de archivos y dispositivos##](#gesti%C3%B3n-de-archivos-y-dispositivos)
-- [Estructura del directorio##](#estructura-del-directorio)
-- [Almacenamiento de archivos##](#almacenamiento-de-archivos)
-- [Problema de fragmentación##](#problema-de-fragmentaci%C3%B3n)
-- [Fragmentación interna:## Se divide el disco en bloques de tamaño fijo](#fragmentaci%C3%B3n-interna-se-divide-el-disco-en-bloques-de-tama%C3%B1o-fijo)
-- [Fragmentación externa:## El cambio de tamaño de archivos, así como su](#fragmentaci%C3%B3n-externa-el-cambio-de-tama%C3%B1o-de-archivos-as%C3%AD-como-su)
-- [Sistemas de archivos##](#sistemas-de-archivos)
-- [Técnicas de almacenamiento intermedio##](#t%C3%A9cnicas-de-almacenamiento-intermedio)
-- [Seguridad##](#seguridad)
+# SO. Gestión de archivos y dispositivos
+- [SO. Gestión de archivos y dispositivos](#so-gesti%C3%B3n-de-archivos-y-dispositivos)
+  - [Introducción](#introducci%C3%B3n)
+  - [Estructura](#estructura)
+  - [Funciones](#funciones)
+  - [Manejo del espacio](#manejo-del-espacio)
+  - [Control de bloques libres](#control-de-bloques-libres)
+  - [Estructura del directorio##](#estructura-del-directorio)
+    - [Un único directorio (CP/M)](#un-%C3%BAnico-directorio-cpm)
+    - [Árbol de directorios (DOS)](#%C3%A1rbol-de-directorios-dos)
+    - [Unix (Más sencillo)](#unix-m%C3%A1s-sencillo)
+  - [Almacenamiento de archivos##](#almacenamiento-de-archivos)
+    - [Sistemas](#sistemas)
+  - [Problema de fragmentación](#problema-de-fragmentaci%C3%B3n)
+    - [Fragmentación interna](#fragmentaci%C3%B3n-interna)
+    - [Fragmentación externa](#fragmentaci%C3%B3n-externa)
+  - [Sistemas de archivos](#sistemas-de-archivos)
+  - [Técnicas de almacenamiento intermedio](#t%C3%A9cnicas-de-almacenamiento-intermedio)
+  - [Seguridad](#seguridad)
 
-## Gestión de archivos y dispositivos## 
+## Introducción
 
-Estructura
+## Estructura
 
 Directorios, archivos
 
-Funciones
+## Funciones
 
-Crear/modificar/borrar archivos
+- Crear/modificar/borrar archivos
+- Crear/modificar/borrar directorios
+- Compartición de archivos
+- Permisos
+- Hacer procesos transparentes al usuario
 
-Crear/modificar/borrar directorios
-
-Compartición de archivos
-
-Permisos
-
-Hacer procesos transparentes al usuario
-
-Manejo del espacio
+## Manejo del espacio
 
 Grabación contigua VS división en bloques
 
-Control de bloques libres
+## Control de bloques libres
 
-Lista enlazada uniendo los bloques libres
-
-Mapa de bits. 1 bit por bloque determina si está libre o no
+- Lista enlazada uniendo los bloques libres
+- Mapa de bits. 1 bit por bloque determina si está libre o no
 
 ## Estructura del directorio## 
 
-Un directorio (CP/M)
+### Un único directorio (CP/M)
 
-Árbol de directorios (DOS)
+### Árbol de directorios (DOS)
 
-Entrada del directorio
+- Entrada del directorio
+  - Nombre, extensión, atributos, fecha
+  - Puntero al primer bloque
+  - Tamaño
 
-Nombre, extensión, atributos, fecha
-
-Puntero al primer bloque
-
-Tamaño
-
-Unix (Más sencillo)
+### Unix (Más sencillo)
 
 Entrada del directorio
 
-Nombre del archivo
-
-Número del nodo índice
+- Nombre del archivo
+- Número del nodo índice
 
 ## Almacenamiento de archivos## 
 
-Para aprovechar eficientemente el espacio, los archivos se dividen en
-bloques. Estos bloques se guardan en diferentes ubicaciones del disco.
+- Para aprovechar eficientemente el espacio, los archivos se dividen en bloques. 
+- Estos bloques se guardan en diferentes ubicaciones del disco.
+- Necesaria asociación fichero - bloques para poder leer o escribir un archivo.
 
-Necesaria asociación fichero -- bloques para poder leer o escribir un
-archivo
+### Sistemas
 
-Sistemas
+- Puntero en la última posición de un bloque al siguiente
+- Lista enlazada o tabla (FAT)
+- Nodos índices (Linux/unix)
+  - Punteros a bloques
+  - Punteros indirectos (simples, dobles)
 
-Puntero en la última posición de un bloque al siguiente
+## Problema de fragmentación
 
-Lista enlazada o tabla (FAT)
+### Fragmentación interna
 
-Nodos índices (Linux/unix)
+- Se divide el disco en bloques de tamaño fijo
+(4KB)
+- Cualquier archivo más pequeño ocupa un bloque entero
+- Se desperdicia espacio (fragmentación interna).
 
-Punteros a bloques
+### Fragmentación externa
 
-Punteros indirectos (simples, dobles)
+- El cambio de tamaño de archivos, así como su creación y eliminación, dejan bloques libres insuficientes para ciertos
+archivos (fragmentación externa). 
+- Una posible solución consiste en desfragmentar.
 
-## Problema de fragmentación## 
+## Sistemas de archivos
 
-## Fragmentación interna:##  Se divide el disco en bloques de tamaño fijo
-(4KB). Cualquier archivo más pequeño ocupa un bloque entero y se
-desperdicia espacio (fragmentación interna).
+- FAT
+- NTFS
+- EXT
+- Archivos compartidos
+- Fiabilidad del sistema de archivos
+  - Bloques defectuosos
+  - Copias de seguridad
 
-## Fragmentación externa:##  El cambio de tamaño de archivos, así como su
-creación y eliminación, dejan bloques libres insuficientes para ciertos
-archivos (fragmentación externa). Una posible solución consiste en
-desfragmentar.
+## Técnicas de almacenamiento intermedio
 
-## Sistemas de archivos## 
+- Spooling (impresión)
+- Buffers (entre dispositivos)
+- Caché (disminuir accesos a disco)
+- Utilización eficiente de bloques en disco
 
-FAT
+## Seguridad
 
-NTFS
-
-EXT
-
-Archivos compartidos
-
-Fiabilidad del sistema de archivos
-
-Bloques defectuosos
-
-Copias de seguridad
-
-## Técnicas de almacenamiento intermedio## 
-
-Spooling (impresión)
-
-Buffers (entre dispositivos)
-
-Caché (disminuir accesos a disco)
-
-Utilización eficiente de bloques en disco
-
-## Seguridad## 
-
-Principios de diseño para seguridad
-
-Ataques de seguridad comunes
-
-Validación del usuario
-
-Autenticación: sabe, tiene, es. Desafío (captcha)
-
-Ingeniería social
-
-Biometría
+- Principios de diseño para seguridad
+- Ataques de seguridad comunes
+- Validación del usuario
+  - Autenticación: sabe, tiene, es. Desafío (captcha)
+  - Ingeniería social
+  - Biometría
