--- a/opss/35.Ladefinicióndedatos.nivelesdedescripción.Lenguajes.Diccionariodedatos.docx.md
+++ b/opss/35.Ladefinicióndedatos.nivelesdedescripción.Lenguajes.Diccionariodedatos.docx.md
@@ -1,11 +1,26 @@
 
 - [Introducción](#introducci%C3%B3n)
-- [La definición de datos##](#la-definici%C3%B3n-de-datos)
+- [La definición de datos](#la-definici%C3%B3n-de-datos)
+- [Tablas](#tablas)
+  - [Creación](#creaci%C3%B3n)
+  - [Modificación](#modificaci%C3%B3n)
+  - [Eliminación](#eliminaci%C3%B3n)
+- [Vistas](#vistas)
+- [Índices](#%C3%ADndices)
+- [Restricciones](#restricciones)
+- [Niveles de descripción](#niveles-de-descripci%C3%B3n)
+  - [Nivel físico](#nivel-f%C3%ADsico)
+  - [Nivel lógico](#nivel-l%C3%B3gico)
+  - [Nivel de vistas](#nivel-de-vistas)
+- [Lenguajes](#lenguajes)
+- [Diccionario de datos](#diccionario-de-datos)
+  - [Tipos de información que guarda](#tipos-de-informaci%C3%B3n-que-guarda)
+  - [También puede anotar organización del almacenamiento](#tambi%C3%A9n-puede-anotar-organizaci%C3%B3n-del-almacenamiento)
 
 
 ## Introducción
 
-## La definición de datos## 
+## La definición de datos
 
     a.  Bases de datos
 
@@ -21,17 +36,15 @@
 
         iv. Eliminar una base de datos
 
-    b.  Tablas
+## Tablas
 
-        v.  Creación: columnas, nombre, tipo, not null, default,
-            auto\_increment,
+### Creación
 
-            3.  Restricciones por columnas: primary, unique, check
+- Creación: columnas, nombre, tipo, not null, default, auto_increment,
+- Restricciones por columnas: primary, unique, check
+- se puede cambiar charset, collation, especificar  máximo de filas, por ejemplo
 
-            4.  También se puede cambiar charset, collation, especificar
-                máximo de filas, por ejemplo
-
-            5.  Despues de todas las columnas
+            2.  Despues de todas las columnas
 
                 a.  Agregar restricciones y claves de varias columnas
 
@@ -42,105 +55,80 @@
                 d.  Referencia en claves foráneas y acciones en cascada
                     (References Pedido(x) on update cascade)
 
-            6.  Mostrar información: show y desc
+            3.  Mostrar información: show y desc
 
-        vi. Modificación: alter
+### Modificación
 
-            7.  Añadir columnas, cambiar nombres de columnas, eliminar
-                columnas, renombrar tabla
+Modificación: alter
 
-            8.  Agregar nuevos índices (add index)
+Podemos:
 
-        vii. Eliminación
+- Añadir columnas o eliminarlas
+- Cambiar nombres de columnas
+- Renombrar tabla
+- Agregar nuevos índices (add index)
 
-            9.  Drop (borra contenido y definición de la tabla)
+### Eliminación
 
-            10. Truncate (borra contenido pero deja la tabla). Similar a
-                delete from pero registra una acción en el log en lugar
-                de una por fila)
+- Drop (borra contenido y definición de la tabla)
+- Truncate (borra contenido pero deja la tabla).
+- Similar a delete from pero registra una acción en el log en lugar de una por fila)
 
-    c.  Vistas
+## Vistas
 
-        viii. Definición de la vista. Se lee haciendo select sobre la
-            vista
+- Definición de la vista. Se lee haciendo select sobre la vista
+- Con condiciones, se pueden hacer modificaciones, inserciones y borrados
 
-        ix. Con condiciones, se pueden hacer modificaciones, inserciones
-            y borrados
+## Índices
 
-    d.  Índices
+- Aceleran operaciones de búsqueda. Se pueden crear con posterioridad.
+- Pueden ser multicolumna. Pueden ser parciales o completos
+- No se pueden modificar pero sí borrar
 
-        x.  Aceleran operaciones de búsqueda. Se pueden crear con
-            posterioridad.
+## Restricciones
 
-        xi. Pueden ser multicolumna. Pueden ser parciales o completos
+## Niveles de descripción
 
-        xii. No se pueden modificar pero sí borrar
+- Desarrolladores esconden complejidad a los usuarios a través de diferentes niveles de abstracción
+- Se busca simplificar la interacción de los usuarios con el sistema
 
-    e.  Restricciones
+### Nivel físico
 
-3.  ## Niveles de descripción## 
+- Describe cómo se almacenan realmente los datos.
+- Estructuras de bajo nivel
+- Registros se almacenan como bloques de posiciones almacenadas (palabras o bytes)
 
-    f.  Desarrolladores esconden complejidad a los usuarios a través de
-        diferentes niveles de abstracción
+### Nivel lógico
 
-    g.  Se busca simplificar la interacción de los usuarios con el
-        sistema
+- Describe qué datos se almacenan en BD
+- También qué relaciones existen entre ellos (DBA, programadores)
 
-    h.  Niveles
+### Nivel de vistas
 
-        xiii. Nivel físico:
+- Describe parte de la BD completa.
+- Usuarios solo necesitan acceder a una parte.
+- Proporciona también mecanismo de seguridad
+- Se pueden proporcionar muchas vistas para la misma BD
 
-            11. describe cómo se almacenan realmente los datos.
-                Estructuras de bajo nivel
+## Lenguajes
 
-            12. Registros se almacenan como bloques de posiciones
-                almacenadas (palabras o bytes)
+## Diccionario de datos
 
-        xiv. Nivel lógico:
+- SGDB necesita guardar datos sobre las relaciones (esquemas)
+- Diccionario contiene metadatos, datos acerca de los datos.
+- Guarda esquema lógico de las relaciones y su información de almacenamiento físico
+- SGDB consulta diccionario antes de leer o modificar datosreales.
+- Es una BD en miniatura
 
-            13. describe qué datos se almacenan en BD y qué relaciones
-                existen entre ellos (DBA, programadores)
+### Tipos de información que guarda
 
-        xv. Nivel de vistas: describe parte de la BD completa.
+- Nombres de relaciones
+- Nombres de atributos, dominios y longitudes
+- Nombres de vistas y definiciones
+- Restricciones de integrida
+- Usuarios autorizados
+- Información estadística
 
-            14. Usuarios solo necesitan acceder a una parte. Proporciona
-                también mecanismo de seguridad
+### También puede anotar organización del almacenamiento
 
-            15. Se pueden proporcionar muchas vistas para la misma BD
-
-4.  ## Lenguajes## 
-
-5.  ## Diccionario de datos## 
-
-    i.  definición
-
-        xvi. SGDB necesita guardar datos sobre las relaciones (esquemas)
-
-        xvii. Diccionario contiene metadatos, datos acerca de los datos.
-
-        xviii.  Guarda esquema lógico de las relaciones y su información
-            de almacenamiento físico
-
-        xix. SGDB consulta diccionario antes de leer o modificar datos
-            reales.
-
-        xx. Es una BD en miniatura
-
-    j.  Tipos de información que guarda
-
-        xxi. Nombres de relaciones
-
-        xxii. Nombres de atributos, dominios y longitudes
-
-        xxiii.  Nombres de vistas y definiciones
-
-        xxiv. Restricciones de integridad
-
-        xxv. Usuarios autorizados
-
-        xxvi. Información estadística
-
-    k.  También puede anotar organización del almacenamiento
-
-        xxvii.  Puede anotar archivos, y bloques que almacenan los
-            registros de cada relación
+Puede anotar archivos, y bloques que almacenan los registros de cada relación
